syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";

option go_package = "github.com/apus-run/gaea/internal/testdata/helloworld";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply)  {
    option (google.api.http) = {
      get: "/hello/{name}",
    };
  }
  // Sends a greeting
  rpc SayHelloPost (HelloRequest) returns (HelloReply)  {
    option (google.api.http) = {
      post: "/hello",
      body: "*"
    };
  }
  // Sends a greeting
  rpc SayHelloStream (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
